Enhancement - WizardStep3 - Implement parameter option change handling and improve debug information display. Update language file for consistency.

--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/debug.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/debug.html
@@ -1,6 +1,6 @@
 <div class="w-100" x-data="{ showDetailsData:false, debugTabSelected:'bean' }">
     <!-- Bean Details [DEBUG] -->
-    <stic-field-checkbox class="text-muted form-switch" x-model="showDetailsData" label="[Mostrar Detalles]"></stic-field-checkbox>
+    <stic-field-checkbox class="text-muted form-switch" x-model="showDetailsData" label="LBL_WIZARD_SHOW_DEBUG_INFO"></stic-field-checkbox>
     <div class="card p-2" x-show="showDetailsData">
         <div class="stic-tabs">
             <div class="stic-tab">
