Fixing Wizard Step 3 issues

--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step3.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step3.html
@@ -214,7 +214,7 @@
                             <div class="alert alert-info d-flex align-items-center py-2 mb-3" role="alert">
                                 <i class="suitepicon suitepicon-action-settings me-2"></i>
                                 <div class="flex-grow-1">
-                                    <h4 class="mb-0" id="ModalAction-title" data-model="$store.actionEditor.definition.title" x-init="sticControls.editableText($el);"></h4>
+                                    <h4 class="mb-0" id="ModalAction-title" data-model="$store.actionEditor.action.text" x-init="sticControls.editableText($el);"></h4>
                                     <span class="ms-3 small" x-text="$store.actionEditor.definition.description"></span>
                                 </div>
                             </div>
