Emails de marketing - Maquetar el campo en la vista de detalle

--- a/custom/modules/EmailMarketing/DetailView.html
+++ b/custom/modules/EmailMarketing/DetailView.html
@@ -101,10 +101,8 @@
 	<?php // STIC-Custom 20251202 MHP - Add display HTML field to marketing email ?>
 	<?php // https://github.com/SinergiaTIC/SinergiaCRM/pull/770?>
     <tr>
-	<td scope="row"><span>{MOD.LBL_STIC_DISPLAY_HTML}</span></td>
+	<td scope="row" colspan="3"><span>{MOD.LBL_STIC_DISPLAY_HTML}</span></td>
 	<td><span><input type="checkbox" class="checkbox" id="stic_display_html_c" name="stic_display_html_c" {displayHTML} disabled></span></td>
-	<td scope="row"><span></span></td>
-	<td><span>&nbsp;</span></td>
 	</tr>
 	<?php // END STIC-Custom ?>
 </table>
